--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 <script type="text/javascript" src="js/search.js"></script>
 <script type="text/javascript" src="js/render.js"></script>
+<script type="text/javascript" src="js/sortByTag.js"></script>
 <script type="text/javascript" src="js/infinityScroll.js"></script>
 <script type="text/javascript" src="js/getData.js"></script>
 
